Dr details added to Clinic
